# haskell-intro-2-adts

./: .gitignore  .gitmodules  GNUmakefile  README.rst  index.html  index.html.jinja  make.py
examples/: 03.WhatsYourNameBind.hs  03.WhatsYourNameExpanded.hs  04.WhatsYourNameBind.hs  Composition.hs  Composition.py  Composition0_1.py  Composition2.hs  Composition3.hs  Composition4.hs  Data.hs  Data.py  Data2.hs  Data3.hs  Hspec.hs  Imports.hs  Imports.py  Imports2.hs  Imports3.hs  ImportsA.py  ImportsB.py  TypeAlias.hs  TypeAlias.py  WhatsYourNameBind.hs  WhatsYourNameExpanded.hs
examples/missing-dep-fixed-pkg/: haskell-intro-slides.cabal
examples/missing-dep-fixed-pkg/src/: foo.hs
examples/missing-dep-pkg/: haskell-intro-slides.cabal
examples/missing-dep-pkg/src/: foo.hs
