name:                   HaskellIntroSlides
version:                0.1.0.0
synopsis:               Haskell Intro Slides
homepage:               https://headdesk.cz
license:                BSD3
author:                 Jan Matějka yac@blesmrt.net
maintainer:             Jan Matějka yac@blesmrt.net
copyright:              (c) Jan Matějka
category:               Development
build-type:             Simple
cabal-version:          >=1.10

source-repository head
  type:     git
  location: https://github.com/yaccz/slides-haskell-intro

executable foo
  main-is: foo.hs
  hs-source-dirs:       src
  default-language:     Haskell2010
  build-depends:        base
                        , fibonacci
